Build notifications dropdown - Fixed: Unread notifications are in grey. If a user selects Mark all as read, all notifications are considered read. If a user selects view all, all notifications are considered read. - Fixed: The X clears a notification. This means the notification is removed from the dropdown list but not from the view all notifications page. - Fixed: View all has moved to the bottom so that Mark all as read can be at the top. This brings users to the view all notifications page.
Updated Documentation
