# restapi/DMCInterfaceSwagger.yaml
@@ -65,6 +65,44 @@ paths:
           description: updated user object
           schema:
             $ref: '#/definitions/UserBasicInformation'
+  '/mark-read-notifications':
+    patch:
+      tags:
+        - notification
+      description: Mark read for all user notifications
+      parameters:
+        - name: UserDetails
+          in: body
+          schema:
+            $ref: '#/definitions/UserDetails'
+          required: true
+      responses:
+        200:
+          description: returns updated User Details
+          schema:
+            $ref: '#/definitions/UserDetails'
+  '/clear-notification/{id}':
+    patch:
+      tags:
+        - notification
+      description: Clear notification from dropdown in header
+      parameters:
+        - name: id
+          in: path
+          type: string
+          description: ID notification
+          required: true
+        - name: UserDetails
+          in: body
+          schema:
+            $ref: '#/definitions/UserDetails'
+          required: true
+      responses:
+        200:
+          description: returns updated User Details
+          schema:
+            $ref: '#/definitions/UserDetails'
+  
   '/accounts/{accountID}':
     get:
       tags:
@@ -6515,6 +6553,10 @@ definitions:
       date:
         type: string
         format: dateTime
+      read: 
+        type: boolean
+      cleared: 
+        type: boolean
       linkParams:
         type: object
         enum:
